--- a/ocelot.yml
+++ b/ocelot.yml
@@ -9,6 +9,9 @@ env:
         lorem
         ipsum
 stages:
+   - name: echo
+     script:
+        - echo $multiline
    - name: build
      script:
         - mvn clean install
