--- a/ocelot.yml
+++ b/ocelot.yml
@@ -12,7 +12,7 @@ stages:
    - name: echo
      script:
         - echo $HI
-        - echo $WOOOPS
+        - echo $WOOPS
    - name: build
      script:
         - mvn clean install
