adding skippable branch

--- a/ocelot.yml
+++ b/ocelot.yml
@@ -9,6 +9,10 @@ env:
         lorem
         ipsum
 stages:
+   - name: skipme
+     trigger:
+       branches: 
+         - master
    - name: echo
      script:
         - echo $HI
