--- a/ocelot.yml
+++ b/ocelot.yml
@@ -15,6 +15,7 @@ stages:
      script: 
         - ls -la /root
         - ls -la $HOME
+        - ls -la $HOME/.kube
         - echo $KUBECONFIG
         - cat $KUBECONFIG
         - helm ls
