--- a/ocelot.yml
+++ b/ocelot.yml
@@ -18,7 +18,7 @@ stages:
         - ls -la $HOME/.kube
         - echo $KUBECONFIG
         - cat /root/.kube/metaverse
-        - cat $KUBECONFIG
+        - cat $HOME/.kube/metaverse
         - helm ls
         - kubectl cluster-info
    - name: skipme
